Finish migration